--- a/app.json
+++ b/app.json
@@ -13,12 +13,28 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSFaceIDUsageDescription": "Face ID is used to authenticate the user.",
+        "NSCameraUsageDescription": "Allow access to your camera to scan"
+      },
+      "bundleIdentifier": "com.fareskhuffash.giphy"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.fareskhuffash.giphy"
+    },
+    "locales": {
+      "ar": {
+        "displayName": "Arabic",
+        "direction": "rtl"
       }
     },
     "web": {
@@ -27,10 +43,21 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow user to access your camera",
+          "microphonePermission": "Allow user to access microphone",
+          "recordAudioAndroid": true
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "supportsRTL": true
     }
   }
 }
